5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1846_1274.log
== TEST (2019-06-23 18:00:59) 
-- CODE:
from numpy import*
from numpy.linalg import*

v  = array(eval(input("Digite um numero natural n: ")))

a = zeros(n:n)
print(a)
-- ERROR:
File "XXXX", line 6
    a = zeros(n:n)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:01:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

v  = array(eval(input("Digite um numero natural n: ")))

a = zeros(n,n)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:01:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

v  = array(eval(input("Digite um numero natural n: ")))

a = zeros(n)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:01:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

v  = array(eval(input("Digite um numero natural n: ")))

a =array(zeros(n))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:05:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

v  = array(eval(input("Digite um numero natural n: ")))

a =zeros((v,v))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:06:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

v  = array(eval(input("Digite um numero natural n: ")))

a = zeros((v,v), dtype=int)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:15:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

print(n[0,])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:15:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

print(n[0:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:16:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

print(a[0,1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:16:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

print(a[0:])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:16:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

print(a[0:0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:16:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

print(a[0:0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:24:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n)
		a[i,i] = i + 1
	
print(a)
-- ERROR:
File "XXXX", line 8
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:25:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n)
		print(i)
	
print(a)
-- ERROR:
File "XXXX", line 8
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:25:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n)
	print(i)
	
print(a)
-- ERROR:
File "XXXX", line 8
    for i in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:25:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		a[i,i] = i + 1
	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:31:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n)
			a[i,j] = 1
	
print(a)
-- ERROR:
File "XXXX", line 9
    for j in range(n)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-23 18:31:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n):
			a[i,j] = 1
	
print(a)
-- EXECUTION TIME:
1.16101
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 1 1]
 [1 1 1]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 1 1 1 1 1 1 1]
 [1 1 1 1 1 1 1 1]
 [1 1 1 1 1 1 1 1]
 [1 1 1 1 1 1 1 1]
 [1 1 1 1 1 1 1 1]
 [1 1 1 1 1 1 1 1]
 [1 1 1 1 1 1 1 1]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:31:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n):
			a[i,j] = 1
	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:35:52) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n):
			if	(i = j):
				a[i,j] = j
	
print(a)
-- ERROR:
File "XXXX", line 10
    if	(i = j):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:36:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j
	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:36:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j + 1
	
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:44:14) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j + 1
			elif	(j == i + 1):
					a[i,j] = j + 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:44:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j + 1
			elif	(j == i + 1):
					a[i,j] = j 

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:45:27) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j + 1
			elif	(j == i + 1):
					a[i,j] = j
			elif	(j == i + 2):
					a[i,j] = j

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:46:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j + 1
			elif	(j == i + 1):
					a[i,j] = j
			elif	(j == i + 2):
					a[i,j] = j - 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:47:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j + 1
			elif	(j == i + 1):
					a[i,j] = j
			elif	(j == i + 2):
					a[i,j] = j - 1
			elif	(j == i + 3):
					a[i,j] = j - 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:47:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j + 1
			elif	(j == i + 1):
					a[i,j] = j
			elif	(j == i + 2):
					a[i,j] = j - 1
			elif	(j == i + 3):
					a[i,j] = j - 2

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:48:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j + 1
			elif	(j == i + 1):
					a[i,j] = j
			elif	(j == i + 2):
					a[i,j] = j - 1
			elif	(j == i + 3):
					a[i,j] = j - 2

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:50:20) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)

for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j + 1
			elif	(j == i + 1):
					a[i,j] = j
			elif	(j == i + 2):
					a[i,j] = j - 1
			elif	(j == i + 3):
					a[i,j] = j - 2
			elif	(j == i + 4):
					a[i,j] = j -3

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:52:15) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
b = 1
for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j + b
			elif	(j == i + 1):
					a[i,j] = j
			elif	(j == i + 2):
					a[i,j] = j - 1
			elif	(j == i + 3):
					a[i,j] = j - 2
			elif	(j == i + 4):
					a[i,j] = j -3

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:52:21) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
b = 1
for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j + b
			elif	(j == i + 1):
					a[i,j] = j
			elif	(j == i + 2):
					a[i,j] = j - 1
			elif	(j == i + 3):
					a[i,j] = j - 2
			elif	(j == i + 4):
					a[i,j] = j -3

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:53:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
b = 1
for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j + b
			elif	(j == i + 1):
					a[i,j] = j
			elif	(j == i + 2):
					a[i,j] = j + b
			elif	(j == i + 3):
					a[i,j] = j + b
			elif	(j == i + 4):
					a[i,j] = j + b
			b = b - 1
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 18:54:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
b = 1
for i in range(n):
		for j in range(n):
			if	(i == j):
				a[i,j] = j + 1
			elif	(j == i + 1):
					a[i,j] = j
			elif	(j == i + 2):
					a[i,j] = j - 1
			elif	(j == i + 3):
					a[i,j] = j - 2
			elif	(j == i + 4):
					a[i,j] = j -3

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:05:23) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
b = 1
for i in range(n):
		for j in range(n):
			if (i == b or j == b):
				a[i,j] = b
b = b + 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:05:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
b = 0
for i in range(n):
		for j in range(n):
			if (i == b or j == b):
				a[i,j] = b
b = b + 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:05:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
b = 1
for i in range(n):
		for j in range(n):
			if (i == b or j == b):
				a[i,j] = b
b = b + 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:06:06) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
b = 1
for i in range(n):
		for j in range(n):
			if (i == b or j == b):
				a[i,j] = b
		b = b + 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:06:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
b = 0
for i in range(n):
		for j in range(n):
			if (i == b or j == b):
				a[i,j] = i
		b = b + 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:08:09) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
b = 1
for i in range(n):
		for j in range(n):
			if (i == b or j == b):
				a[i,j] = i
			b = b + 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:08:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
b = 1
for i in range(n):
		for j in range(n):
			if (i == b or j == b):
				a[i,j] = i + 1
			b = b + 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:08:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
b = 1
for i in range(n):
		for j in range(n):
			if (i == b or j == b):
				a[i,j] = i + 1
		b = b + 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-23 19:10:04) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
b = 1
for i in range(n):
		for j in range(n):
			if (i + 1):
				a[i,j] = i + 1


print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:48:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
for i in range(n):
		for j in range(n):
			if (i > j):
				a[i,j] = j + 1
			elif	(i <= j):
					a[i,j] = i + 1

print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:51:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

n  = array(eval(input("Digite um numero natural n: ")))

a = zeros((n,n), dtype=int)
for i in range(n):
		for j in range(n):
			if (i > j):
				a[i,j] = j + 1
			elif	(i <= j):
					a[i,j] = i + 1

print(a)
-- EXECUTION TIME:
1.16043
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
